[package]
name = "rsantas-workshop"
version = "0.1.0"
authors = ["max <maxmueller89@gmail.com>"] # TODO dont want this in vc!!!
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
unused_variables = "warn"

[dependencies]
csv = "1.0.0-beta.5"
serde_derive = "1.0.104"
serde = "1.0.104"
rand = "0.7.3"
